--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <label>Position</label>
                     </div>
                     <div class="col-sm-6">
-                        <input type="range" name="Position" min="0" max="400" id="position">
+                        <input type="range" name="Position" min="50" max="300" id="position">
                         <span class="font-weight-bold text-primary ml-2 valueSpan2" id="positionLabel">200</span>
-                        <span class="blue">g</span>
+                        <span class="blue">cm</span>
                     </div>
                 </div>
                 <div id="div-label-2" class="col-sm-6">
