--- a/index.html
+++ b/index.html
@@ -17,47 +17,35 @@
             Critical Angle Simulation
         </h1>
     </div>
+    <!-- <audio id="tuningFork" style="display:none;" autoplay>
+        <source src="./sounds/tuningFork.wav" type="audio/wav">
+    </audio> -->
+
+    <!-- <audio id="audio" src="./sounds/tuningFork.ogg"></audio> -->
+    <audio id="audio">
+        <source src="./sounds/tuningFork2.ogg" type="audio/ogg">
+        <source src="./sounds/tuningFork2.mp3" type="audio/mpeg">
+    </audio>
+
     <img id="wood" src="./assets/wood.jpg" /><br />
     <img id="wood2" src="./assets/wood2.jpg" /><br />
     <div id="full-display">
         <canvas id="main" id="canvas-style">
         </canvas>
         <div id="input-div">
-            <div class="row">
-                <div id="div-label-1" class="col-sm-6">
-                    <div class="col-sm-6">
-                        <label>Position</label>
-                    </div>
-                    <div class="col-sm-6">
-                        <input type="range" name="Position" min="50" max="300" id="position">
-                        <span class="font-weight-bold text-primary ml-2 valueSpan2" id="positionLabel">200</span>
-                        <span class="blue">cm</span>
-                    </div>
-                </div>
-                <div id="div-label-2" class="col-sm-6">
-                    <div>
-                        <label>Theta: </label>
-                        <label id="thetaLabel" class="blue">0</label>
-                        <span class="blue">degrees</span>
-                    </div>
-                    <div>
-                        <label id="mass-label" class="blue">M1: 400.00</label>
-                        <span class="blue">g</span>
-                    </div>
-                </div>
-            </div>
-            <div id="div-label-3" class="row">
+            <div id="div-label-1" class="col-sm-6">
                 <div class="col-sm-6">
-                    <button onclick="startAnim()" id="submit_button" class="btn btn-success" type="button">Start</button>
-                    <button onclick="resetPosition()" id="submit_button" class="btn btn-success" type="button">Reset</button>
-                    <button onclick="resetRamp()" id="submit_button" class="btn btn-success" type="button">New Trial</button>
+                    <label>Position</label>
                 </div>
-            </div>
-
-            <div id="div-label-4" class="row">
-                <div id="direction-buttons" class="col-sm-6">
-                    <button onclick="setTheta1()" id="submit_button1" class="btn btn-success" type="button">M1</button>
-                    <button onclick="setTheta2()" id="submit_button2" class="btn btn-success" type="button">M2</button>
+                <div class="col-sm-6">
+                    <input type="range" name="Position" min="50" max="300" id="position">
+                    <span class="font-weight-bold text-primary ml-2 valueSpan2" id="positionLabel">50cm</span>
+                    <!-- <span class="blue">cm</span> -->
+                </div>
+                <div id="div-label-3" class="row">
+                    <div class="col-sm-6">
+                        <button onclick="playAudio()" id="submit_button" class="btn btn-success" type="button">Start</button>
+                    </div>
                 </div>
             </div>
         </div>
